# nba_kalshi

./: README.md  pyproject.toml
notebooks/: 01_kalshi_market_data.ipynb  02_find_best_markets.ipynb  03_explore_arcticdb.ipynb
src/: config.py
src/cli/: main.py
src/db/: __init__.py  arctic_store.py
src/ingestion/: __init__.py
src/ingestion/loading/: __init__.py  load_market_metadata.py  market_metadata_loader.py  pre_tip_candlestick_loader.py
src/ingestion/preprocessing/: __init__.py  market_metadata_preprocessor.py
src/models/: game_market_metadata.py  market_metadata.py
